--- a/lang/dotnet/Makefile
+++ b/lang/dotnet/Makefile
@@ -22,7 +22,6 @@ BUILD_DEPENDS=	bash:shells/bash \
 		cmake:devel/cmake-core \
 		git:devel/git \
 		ggrep:textproc/gnugrep \
-		${LOCALBASE}/lib/libcrypto.so.12:security/openssl \
 		terminfo-db>0:misc/terminfo-db
 LIB_DEPENDS=	libbrotlienc.so:archivers/brotli \
 		libicuuc.so:devel/icu \
@@ -46,7 +45,7 @@ BOOTSTRAP_SDKVERSION=				${BOOTSTRAP_DOTNETVERSION}.100
 BOOTSTRAP_SDKVERSIONSUFFIX=			-rtm.24529.1
 BOOTSTRAP_SOURCEBUILT_ARTIFACTS_DISTNAME=	Private.SourceBuilt.Artifacts.${BOOTSTRAP_SDKVERSION}${BOOTSTRAP_SDKVERSIONSUFFIX}.${BOOTSTRAP_SDK_RID}
 BOOTSTRAP_SDK_DISTNAME=				dotnet-sdk-${BOOTSTRAP_SDKVERSION}-${BOOTSTRAP_SDK_RID}
-BOOTSTRAP_SDK_RID=				freebsd.13-${DOTNET_ARCH}
+BOOTSTRAP_SDK_RID=				${SDK_RID}
 
 DOTNETVERSION=		9.0
 SDKVERSION=		${DOTNETVERSION}.103
